fix overlap pass with show button

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ body {
   font-size: 14px !important;
   padding-left: 8px;
   height: 30px !important;
+  padding-right: 60px;
 }
 
 .pass:hover {
